--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext{
         kotlin_version = "1.4.10"
         coroutines_version = "1.2.1"
+        roomVersion = "2.2.5"
     }
     repositories {
         google()
