--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,17 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+
+    //material
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //ROOM
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
 
     //Coroutines
