--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     //ROOM
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+    implementation 'com.google.android.material:material:1.2.1'
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
 
     //Coroutines
